--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
+import ScrollTopButton from "../components/ScrollTopButton.astro";
 ---
 
 <html lang="en">
@@ -20,6 +21,7 @@ import "../styles/global.css";
   <main class="pt-20">
     <slot />
   </main>
+  <ScrollTopButton />
   <Footer />
 </body>
 </html>
