--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,18 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Hero from "../components/inicio.astro";
-import Beneficios from "../components/Beneficios.astro";
+import Hero from "../components/Home.astro";
+import Caracteristicas from "../components/Caracteristicas.astro";
 import ComoFunciona from "../components/ComoFunciona.astro";
 import Testimonios from "../components/Testimonios.astro";
-import CtaFinal from "../components/demo.astro";
-import Footer from "../components/Footer.astro"; // Si luego quieres incluir un footer también
+import Contacto from "../components/Contacto.astro";
 ---
 
 <Layout>
   <Hero />
-  <Beneficios />
+  <Caracteristicas />
   <ComoFunciona />
   <Testimonios />
-  <CtaFinal />
+  <Contacto />
 </Layout>
 
 
