--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,19 +1,21 @@
 ---
 ---
-<nav class="w-full px-6 py-4 flex justify-between items-center shadow-md bg-white fixed top-0 left-0 z-50">
-  <h1 class="text-2xl font-bold text-indigo-600">Schedule Swift Gen</h1>
-  <ul class="flex gap-6 text-sm font-medium">
+<nav class="w-full px-6 py-4 flex justify-between items-center shadow-md bg-[#181725] fixed top-0 left-0 z-50">
+  <a href="/" class="flex items-center space-x-2">
+    <img src="/images/logo_modificado.svg" alt="Logo Auralis" class="h-8 w-24">
+  </a>
+  <ul class="flex gap-6 text-sm font-medium text-white">
     <li>
-      <a href="#beneficios" class="hover:text-indigo-500 transition">Características</a>
+      <a href="#caracteristicas" class="hover:text-[#3EA7DA] transition">Características</a>
     </li>
     <li>
-      <a href="#como-funciona" class="hover:text-indigo-500 transition">Cómo Funciona</a>
+      <a href="#como-funciona" class="hover:text-[#3EA7DA] transition">Cómo Funciona</a>
     </li>
+    <!-- <li>
+      <a href="#testimonios" class="hover:text-[#3EA7DA] transition">Testimonios</a>
+    </li> -->
     <li>
-      <a href="#testimonios" class="hover:text-indigo-500 transition">Testimonios</a>
-    </li>
-    <li>
-      <a href="#demo" class="hover:text-indigo-500 transition">Demo</a>
+      <a href="#demo" class="hover:text-[#3EA7DA] transition">Demo</a>
     </li>
   </ul>
 </nav>
