--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,25 +6,26 @@ import ScrollTopButton from "../components/ScrollTopButton.astro";
 ---
 
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Schedule Swift Gen</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/logo_icono.ico" />
+    <title>Auralis</title>
 
-  <!-- FontAwesome -->
-  <script src="https://kit.fontawesome.com/a2e0b6edbd.js" crossorigin="anonymous" is:inline></script>
+    <!-- FontAwesome -->
+    <script
+      src="https://kit.fontawesome.com/a2e0b6edbd.js"
+      crossorigin="anonymous"
+      is:inline></script>
 
-  <link rel="stylesheet" href="/path/to/your/styles.css" />
-</head>
-<body class="bg-white text-gray-800">
-  <Navbar />
-  <main class="pt-20">
-    <slot />
-  </main>
-  <ScrollTopButton />
-  <Footer />
-</body>
+    <link rel="stylesheet" href="/path/to/your/styles.css" />
+  </head>
+  <body class="bg-white text-gray-800">
+    <Navbar />
+    <main class="pt-20">
+      <slot />
+    </main>
+    <ScrollTopButton />
+    <Footer />
+  </body>
 </html>
-
-
-
