Refactor Navbar component for improved layout and responsiveness; add Video component to index page.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "../components/Home.astro";
 import Caracteristicas from "../components/Caracteristicas.astro";
 import ComoFunciona from "../components/ComoFunciona.astro";
 import Testimonios from "../components/Testimonios.astro";
+import Video from "../components/Video.astro";
 import Contacto from "../components/Contacto.astro";
 ---
 
@@ -11,7 +12,8 @@ import Contacto from "../components/Contacto.astro";
   <Hero />
   <Caracteristicas />
   <ComoFunciona />
-  <Testimonios />
+  <!-- <Testimonios /> -->
+  <Video />
   <Contacto />
 </Layout>
 
