--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -18,13 +18,14 @@
         class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start"
       >
         <a
-          href="#beneficios"
+          href="#caracteristicas"
           class="bg-[#0960AD] text-white font-semibold px-6 py-3 rounded-full hover:bg-[#3EA7DA] transition"
         >
           Comenzar ahora
         </a>
         <a
-          href="#"
+          href="https://generador-de-horarios-mu.vercel.app/"
+          target="_blank"
           class="border border-[#0960AD] text-[#0960AD] font-semibold px-6 py-3 rounded-full transition"
         >
           Ver demostración
