Create preguntas frecuentes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,15 +5,16 @@ import Caracteristicas from "../components/Caracteristicas.astro";
 import ComoFunciona from "../components/ComoFunciona.astro";
 import Testimonios from "../components/Testimonios.astro";
 import Video from "../components/Video.astro";
+import Preguntas from "../components/Preguntas.astro";
 import Contacto from "../components/Contacto.astro";
 ---
 
-<Layout>
-  <Hero />
+<Layout>  <Hero />
   <Caracteristicas />
   <ComoFunciona />
   <!-- <Testimonios /> -->
   <Video />
+  <Preguntas />
   <Contacto />
 </Layout>
 
