--- a/src/components/ComoFunciona.astro
+++ b/src/components/ComoFunciona.astro
@@ -19,7 +19,7 @@
         <button
           class="cursor-pointer mt-6 bg-[#0960AD] hover:bg-[#3EA7DA] text-white px-6 py-2 rounded-full font-semibold transition"
         >
-          <a href="https://generador-de-horarios-mu.vercel.app/" target="_blank"
+          <a href="https://app.auralis.uno/login" target="_blank"
             >Ver demostración completa</a
           >
         </button>
