--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -24,13 +24,13 @@
     */
 }
     <iframe
-      width="100%"
-      height="100%"
-      src="https://www.youtube.com/watch?v=eWCMXmsBK4U"
-      title="Generador de horarios Auralis"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-    ></iframe>
+  width="100%"
+  height="100%"
+  src="https://www.youtube.com/embed/eWCMXmsBK4U"
+  title="Generador de horarios Auralis"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+  ></iframe>
   </div>
 </section>
